# multillm

./: .env.example  .gitignore  README.md  agents.yaml  pyproject.toml
multillm/: __init__.py  __main__.py  agent.py  config.py  costs.py  council.py  env.py  mixture.py  prompts.py  roles.py  team.py  tracking.py  usage.py  verifier.py
multillm/backends/: __init__.py  base.py  claude.py  openrouter.py
skill/: SKILL.md
tests/: conftest.py  test_agent.py  test_claude_backend.py  test_cli.py  test_config.py  test_costs.py  test_council.py  test_env.py  test_mixture.py  test_openrouter.py  test_prompts.py  test_roles.py  test_team.py  test_tracking.py
