[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multillm"
version = "0.1.0"
description = "Raciocinio multi-LLM (Council + Papeis) com backends plugaveis: Claude Code headless e OpenRouter."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["multillm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
